--- a/_includes/custom/navigation.html
+++ b/_includes/custom/navigation.html
@@ -1,4 +1,5 @@
 <ul class="main-navigation">
   <li><a href="{{ root_url }}/">Blog</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archivos</a></li>
+  <li><a href="http://www.programando.org/aprende-a-programar">Aprende a Programar</a></li>
 </ul>
