--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,17 +17,17 @@ single: true
     {% endunless %}
     <p class="meta">
       {% if page.previous.url %}
-        <a class="basic-alignment left" href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}">&laquo; {{page.previous.title}}</a>
+        <a class="basic-alignment left" href="{{page.previous.url}}" title="Anterior Post: {{page.previous.title}}">&laquo; {{page.previous.title}}</a>
       {% endif %}
       {% if page.next.url %}
-        <a class="basic-alignment right" href="{{page.next.url}}" title="Next Post: {{page.next.title}}">{{page.next.title}} &raquo;</a>
+        <a class="basic-alignment right" href="{{page.next.url}}" title="Siguiente Post: {{page.next.title}}">{{page.next.title}} &raquo;</a>
       {% endif %}
     </p>
   </footer>
 </article>
 {% if site.disqus_short_name and page.comments == true %}
   <section>
-    <h1>Comments</h1>
+    <h1>Comentarios</h1>
     <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
   </section>
 {% endif %}
